syntax = "proto3";

package buildbarn.configuration.sync_jwks_to_configmap;

import "pkg/proto/configuration/http/client/client.proto";

option go_package = "github.com/buildbarn/bb-storage/pkg/proto/configuration/sync_jwks_to_configmap";

message ApplicationConfiguration {
  // Configuration options for the HTTP client that is used to download
  // the JSON Web Key Set (JWKS).
  buildbarn.configuration.http.client.Configuration http_client = 1;

  // The URL of the JWKS to download.
  string jwks_url = 2;

  // The namespace in which the ConfigMap exists in which the JWKS
  // should be stored.
  string config_map_namespace = 3;

  // The name of the ConfigMap in which the JWKS should be stored.
  string config_map_name = 4;

  // The key in the ConfigMap in which the JWKS should be stored.
  string config_map_key = 5;
}
